# representation-noising

./: README.md  pyproject.toml  requirements.txt
data/: decoding_trust_with_refusals_train.json
data/decoding_trust/: training_dataset.jsonl
notebooks/: repnoise_demo.ipynb
representation_noising/: datasets.py  evaluation.py  loss.py
scripts/: generate_paired_refusals.py  generate_paired_refusals.sh
